--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -26,7 +26,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text="http://schemas.android.com/apk/res-auto"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/label_name"
@@ -51,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:text="SUCCESSFULL"
+            tools:text="SUCCESSFULL"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@id/label_status"
             app:layout_constraintTop_toTopOf="@id/label_status"
